sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	val n=getNombreValeurs()
	var k:Int=0
	while (k != n-1) {
		if (k== -1) {k=0}
		if (plusPetit(k+1,k)) {
				echange(k+1,k)
				k=k-1 
				if(k==-1) {k=1}}
		else {k=k+1}}
	
}
